# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

add_executable(hashing_vectorizer "hashing_vectorizer.cpp")
target_link_libraries(hashing_vectorizer PRIVATE onnxruntime)